revise into book

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,7 +9,7 @@ crossref:
   sec-prefix: Chapter
 project:
   title: "Thesis"
-  type: website
+  type: book
   output-dir: output
   execute-dir: project
   preview:
@@ -27,7 +27,7 @@ format:
   docx:
       from: markdown+grid_tables
       reference-doc: reference.docx
-      toc: false
+      toc: true
       highlight-style: github
 number-depth: 2
 
