--- a/metadata/_book.yml
+++ b/metadata/_book.yml
@@ -91,5 +91,11 @@ book:
       file: chapters/12_discussion/index.qmd
     - part: "Appendix"
       chapters:
-        - text: "Appendices"
-          file: "chapters/appendix/index.qmd"
+          - text: "A: Search Strategies"
+            file: "chapters/appendix/synthesis_search_strategies.qmd"
+          - text: "B: Barriers"
+            file: chapters/appendix/barriers.qmd
+          - text: "C: Ideas generated from workshops and focus groups"
+            file: "chapters/appendix/ideas.qmd"
+          - text: "D: Intervention Components Table"
+            file: "chapters/appendix/intervention_component_table.qmd"
