editing development and testing chapters

--- a/metadata/_book.yml
+++ b/metadata/_book.yml
@@ -97,3 +97,5 @@ book:
             file: "chapters/appendix/ideas.qmd"
           - text: "D: Intervention Components Table"
             file: "chapters/appendix/intervention_component_table.qmd"
+          - text: "E: Deficiencies"
+            file: "chapters/appendix/deficiencies.qmd"
