--- a/metadata/_book.yml
+++ b/metadata/_book.yml
@@ -22,7 +22,7 @@ book:
           file: "chapters/4_survey_content/index.qmd"
         - text: "EQUATOR website evaluation"
           file: "chapters/5_website_audit/index.qmd"
-    - part: "**Identifying intervention changes**"
+    - part: "**Identifying and implementing intervention changes**"
       chapters:
         - text: "The Behaviour Change Wheel"
           file: chapters/6_bcw/index.qmd
@@ -30,11 +30,11 @@ book:
           file: chapters/7_workshops/index.qmd
         - text: "Focus groups"
           file: chapters/8_focus_groups/index.qmd
-    - part: "**Defining, developing, and refining intervention content**"
-      chapters:
         - text: "Defining and developing intervention content"
           file: chapters/9_defining_content/index.qmd
-        - text: "Piloting with authors"
+    - part: "**Refining the intervention**"
+      chapters:
+        - text: "Author interviews"
           file: chapters/10_pilot/index.qmd
     - text: "Discussion"
       file: chapters/11_discussion/index.qmd
